<resources>
    <string name="app_name">My Application</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_gender">Sex</string>
    <string name="prompt_birthday">Birthday</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="validate">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="signup">Signup</string>
    <string name="prompt_password_confirm">Repeat password</string>
    <string name="pwd_special_char">Must have a special charcater</string>
    <string name="pwd_upper_char">Must have a upper character</string>
    <string name="pwd_lower_char">Must have a lower character</string>
    <string name="pwd_length">Must have 8 characters</string>
    <string name="dont_have_space">Space not allow</string>
    <string name="lastname_special_char">Accept only \' and - special character</string>
    <string name="lastname_special_space">Mustn\'t have a space</string>
    <string name="dont_have_spec_char">Special character not allow</string>
    <string name="wrong_confirm_pwd">Wrong password</string>
    <string-array
        name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>
